infra/k8s/auth-sql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-sql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-sql
  template:
    metadata:
      labels:
        app: auth-sql
    spec:
      containers:
        - name: auth-sql
          image: mysql
          volumeMounts:
            - name: mysql-persistant-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistant-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: auth-sql-srv
spec:
  selector:
    app: auth-sql
  ports:
    - name: db
      protocol: TCP
      port: 3306
      targetPort: 3306
