infra/k8s/host-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: host-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: host
  template:
    metadata:
      labels:
        app: host

    spec:
      containers:
        - name: host
          image: joekingsleymukundi/host

---
apiVersion: v1
kind: Service
metadata:
  name: host-srv
spec:
  selector:
    app: host
  ports:
    - name: host
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: host-mail
      protocol: TCP
      port: 587
      targetPort: 587
