infra/k8s/host-sql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: host-sql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: host-sql
  template:
    metadata:
      labels:
        app: host-sql
    spec:
      containers:
        - name: host-sql
          image: mysql
          volumeMounts:
            - name: mysql-persistant-storage
              mountPath: /var/lib/mysql-ehoomes_host
      volumes:
        - name: mysql-persistant-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim-host
---
apiVersion: v1
kind: Service
metadata:
  name: host-sql-srv
spec:
  selector:
    app: host-sql
  ports:
    - name: db
      protocol: TCP
      port: 3306
      targetPort: 3306
